--- a/src/component/Header.css
+++ b/src/component/Header.css
@@ -1,7 +1,7 @@
 .home-bg {
   width: 100vw;
   height: 100vh;
-  background: url("./home-bg.svg");
+  background-image: url("./home-bg.svg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
