--- a/src/pages/Users.css
+++ b/src/pages/Users.css
@@ -1,7 +1,23 @@
 .hairtsag {
-  border: 1px black solid;
+  border: 5px rgb(255, 255, 255);
+  border-radius: 8px;
+  background-color: #dfeffa;
   width: 300px;
   height: 300px;
+  margin: 40px;  
+}
+.tegshee{
+  margin-left: 80px;
+  margin-top: 30px;
+}
+.bru{
   display: flex;
   flex-wrap: wrap;
+  background-color: #b8e3ff;
+  display: flex;
+  justify-content: center;
+}
+.zurag{
+  width: 120px;
+  height: 120px;
 }
