--- a/src/component/Body.css
+++ b/src/component/Body.css
@@ -70,3 +70,39 @@
   width: 100vw;
   background-color: rgb(234, 234, 234);
 }
+
+.bro {
+  color: white;
+}
+.bro1 {
+  font-size: 60px;
+  font-weight: 600;
+}
+.bro2 {
+  font-size: 25px;
+  font-weight: 500;
+}
+
+.btn-2 {
+  background-color: #0bbef2;
+  color: white;
+  margin-left: 3%;
+  margin-bottom: 3px;
+  font-weight: 600;
+  border-radius: 5%;
+  border-color: transparent;
+}
+.home-bg {
+  width: 100vw;
+  height: 100vh;
+  background-image: url("./home-bg.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.tseg {
+  background-color: #0bbef2;
+  height: 10px;
+  width: 10px;
+}
